--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   flutter_randomcolor: ^1.0.15
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
