--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_randomcolor: ^1.0.15
   carousel_slider: ^4.2.1
   async: ^2.11.0
+  image_picker: ^1.1.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
